--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS File -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
 
 <body>
     <div class="search-div">
-        <h1>Github Profile</h1>
+        <h1>Github Profiles</h1>
         <form>
             <input type="text" placeholder="Enter Github Username" id="username" autocomplete="off" autofocus>
             <button id="search-btn">Search</button>
